--- a/static/css/mediaqueries.css
+++ b/static/css/mediaqueries.css
@@ -11,13 +11,27 @@
   .arrow {
     display: none;
   }
+  .text-container p {
+    font-size: 0.8rem;
+    height: fit-content;
+  }
+  .text-container h2 {
+    font-size: 1.2rem;
+  }
+  .text-container {
+    height: 60vw;
+  }
 }
 
-@media screen and (max-width: 700px) {
-  body {
-    display: none;
+@media screen and (max-width: 800px) {
+  
+  .text-container {
+    gap: 10px;
+    width: 50vw;
+    height: 40vw;
+    padding: 30px;
   }
-  * {
-    background-color: #ffefd5;
+  .img-container, img {
+    width: 60vw;
   }
 }
