--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,15 @@ button {
   width: 150px;
 }
 
+button:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+#signup-login button:hover {
+  color: #ffb6c1;
+}
+
 h1 {
   font-size: 3rem;
   color: #ffb6c1;
@@ -108,6 +117,7 @@ h1 {
   max-width: 80%;
   overflow: hidden;
   font-size: 1rem;
+  z-index: 2;
 }
 
 .text-container h2 {
@@ -142,10 +152,15 @@ h1 {
   overflow: hidden;
   transition: all 0.3 ease-in-out;
   padding: 0;
-  border-radius: 25px 0 25px 25px;
+  border-radius: 15px 0 15px 15px;
   max-height: 0;
+  background-color: #ffb6c1;
+  z-index: 1;
 }
 
+#hamburger-nav {
+  display: none;
+}
 
 .hamburger-icon {
   display: flex;
@@ -154,12 +169,15 @@ h1 {
   height: 24px;
   width: 30px;
   cursor: pointer;
+  background-color: #ffb6c1;
+  padding: 9px;
+  border-radius: 5px;
 }
 
 .hamburger-icon span {
   width: 100%;
-  height: 2px;
-  background-color: black;
+  height: 4px;
+  background-color: #ffefd5;
   transition: all 0.3 ease-in-out;
 }
 
@@ -169,13 +187,13 @@ h1 {
 }
 
 .hamburger-icon.open span:first-child {
-  transform: rotate(45deg) translate(10px, 5px);
+  transform: rotate(45deg) translate(7px, 7px);
 }
 .hamburger-icon.open span:nth-child(2) {
   opacity: 0;
 }
 .hamburger-icon.open span:last-child {
-  transform: rotate(-45deg) translate(10px, -5px);
+  transform: rotate(-45deg) translate(7px, -7px);
 }
 
 .hamberger-icon span:first-child {
@@ -188,3 +206,6 @@ h1 {
   transform: none;
 }
 
+.container.blur {
+  opacity: 0.6;
+}
